[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/images/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/PauseResumeButton.gd" type="Script" id=4]
[ext_resource path="res://PixeloidTheme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.75, 32 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -24.249, -31.151, 28, -31.151, 29.1875, -30.125, 30.3125, -28.4375, 31.4375, -26.75, 31.8125, -25, 31.751, 32.849, -32.249, 32.849, -32, -24, -31.625, -28.0625, -30.4375, -30.1875, -28.3125, -31.125, -24.249, -31.151 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collision_ray" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HUD" parent="Camera2D" instance=ExtResource( 3 )]

[node name="control_timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PausePopup" type="Popup" parent="CanvasLayer"]
pause_mode = 2
margin_left = 414.854
margin_top = 444.856
margin_right = 414.854
margin_bottom = 444.856
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PausePopup"]
light_mask = 11
anchor_right = 3.775
anchor_bottom = 2.45
margin_left = -415.0
margin_top = -445.0
margin_right = 609.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0.67451 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PausePopup/ColorRect"]
margin_top = 120.0
margin_right = 1021.0
margin_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "PAUSED"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseOptions" type="VBoxContainer" parent="CanvasLayer/PausePopup/ColorRect"]
anchor_top = 0.47
anchor_right = 1.0
anchor_bottom = 0.756
margin_left = 276.0
margin_top = -42.0
margin_right = -277.0
margin_bottom = 29.4
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseResumeButton" type="Button" parent="CanvasLayer/PausePopup/ColorRect/pauseOptions"]
margin_right = 471.0
margin_bottom = 119.0
focus_neighbour_top = NodePath("../PauseQuitButton")
focus_neighbour_bottom = NodePath("../PauseQuitButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"
script = ExtResource( 4 )

[node name="PauseQuitButton" type="Button" parent="CanvasLayer/PausePopup/ColorRect/pauseOptions"]
margin_top = 123.0
margin_right = 471.0
margin_bottom = 243.0
focus_neighbour_top = NodePath("../PauseResumeButton")
focus_neighbour_bottom = NodePath("../PauseResumeButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "QUIT"

[connection signal="about_to_show" from="CanvasLayer/PausePopup" to="CanvasLayer/PausePopup/ColorRect/pauseOptions/PauseResumeButton" method="_on_PausePopup_about_to_show"]
[connection signal="pressed" from="CanvasLayer/PausePopup/ColorRect/pauseOptions/PauseResumeButton" to="CanvasLayer/PausePopup/ColorRect/pauseOptions/PauseResumeButton" method="_on_PauseResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePopup/ColorRect/pauseOptions/PauseQuitButton" to="CanvasLayer/PausePopup/ColorRect/pauseOptions/PauseResumeButton" method="_on_PauseQuitButton_pressed"]
